@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-15T08:09:59Z",
+  "timestamp" : "2022-05-16T08:10:47Z",
   "count_outdated" : 1115,
   "uniques_outdated" : 69,
-  "count" : 1529,
-  "uniques" : 82,
+  "count" : 1531,
+  "uniques" : 83,
   "views" : [
     {
       "timestamp": "2022-05-03T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 4,
       "count_minmax": [ 3, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
