@@ -1,5 +1,5 @@
 {
-  "count": 414,
+  "count": 416,
   "uniques": 3,
   "views": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
